src/objects/Course_Budget__c.object
<CustomObject>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CourseBudget_Key__c</fullName>
        <externalId>true</externalId>
        <label>CourseBudget Key</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Course Budget</relationshipLabel>
        <relationshipName>Course_Budget</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>CARE</fullName>
                </value>
                <value>
                    <fullName>Intrabiz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <externalId>true</externalId>
        <label>CourseKey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Estimated travel costs</fullName>
                </value>
                <value>
                    <fullName>Estimated PSA costs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Course Budget</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CB-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Budget</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>